fixed header slideshow to be full width and height. nav dropdowns shifted over right

--- a/greenwave/solid/static/css/style.css
+++ b/greenwave/solid/static/css/style.css
@@ -105,9 +105,9 @@ a:focus {
 	font-size: 12px;
 }
 
-/*.navbar-default .navbar-nav > li > a:hover {
-	color: #00b3fe;
-}*/
+.navbar-nav > li > .dropdown-menu {
+	left: 10px;
+}
 
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
 	color: #00b3fe;
@@ -519,10 +519,8 @@ h5 {
 	font-size: 14px;
 }
 
-header {
-	height: 450px;
-	background: transparent;
-	z-index: -1;
+#page-top {
+	padding-top: 0;
 }
 
 .main-nav, .main {
@@ -532,7 +530,9 @@ header {
 .main-nav {
 	background: #fff;
 	z-index: 150;
-	margin-bottom: -80px;
+	top: -103px;
+	height: 105px;
+	/*margin-bottom: -80px;*/
 	-webkit-box-shadow: 0px 2px 3px rgba(119,178,65,.9);
 	        box-shadow: 0px 2px 3px rgba(119,178,65,.9);
 
@@ -557,6 +557,7 @@ header, .main-nav-scrolled {
 
 .navbar-default .navbar-nav li a {
 	color: #4a4a4a;
+	font-size: 15px;
 }
 
 .navbar-default .navbar-nav > li > a:hover, 
@@ -579,12 +580,37 @@ header, .main-nav-scrolled {
 	color: #4a4a4a;
 }
 
-header .flexslider img {
-	max-height: 450px;
+header {
+	/*height: 450px;*/
+	background: transparent;
+	z-index: -1;
+	background: url(../img/slide03.jpg) no-repeat;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	position: relative;
+	float: none;
+}
+
+section.hdr-section {
+	height: calc(100% - 66px);
+}
+
+section.hdr-section .flexslider img {
+	min-width: 100%;
 	margin: auto;
 }
 
-header .flexslider .slides {
+section.hdr-section .flexslider,
+.flexslider .flex-viewport,
+section.hdr-section .flexslider .flex-viewport ul.slides,
+section.hdr-section .flexslider .flex-viewport ul.slides li,
+section.hdr-section .flexslider .flex-viewport ul.slides li img {
+	height: calc(100% - 66px) !important;
+}
+
+section.hdr-section .slides {
 	text-align: center;
 }
 
@@ -593,7 +619,7 @@ header .flexslider .slides {
 }
 
 .main {
-	margin-top: 80px;
+	top: -103px;
 }
 
 .text-center {
@@ -607,6 +633,7 @@ p, a {
 .greenwave-statement {
 	padding: 30px 0;
 }
+
 .greenbtn {
 	color: #77b241;
 	background: #f3f3f3;
